Extend ArrayExpress function to other data types than affy. Functions based on the QT and the scanner name.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@32124 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.1.3
+Version: 1.1.5
 Author: Audrey Kauffmann
 Maintainer: Audrey Kauffmann <audrey@ebi.ac.uk>
-Depends: R (>= 2.6.0), Biobase (>= 1.15.13), affy, limma
+Depends: R (>= 2.6.0), Biobase (>= 1.15.13), affy, limma, Biostrings
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
 License: Artistic License 2.0
 biocViews: Microarray, DataImport, OneChannel, TwoChannel
