--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,2 +1,1 @@
-export("ArrayExpress","ArrayExpress2", "extract.zip", "extract.zip.from.AE")
-importFrom("limma", "removeExt")
+export("ArrayExpress","extract.zip", "extract.zip.from.AE")
