Divided the main function ArrayExpress into two functions: - getAE to download and unzip the archive from the database. - magetab2bioc to convert mage tab files into bioconductor object even if the files are stored locally. - The function AEproc2bioc, by Juok Cho, is made to deal with processed data.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@34132 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,1 @@
-export("ArrayExpress","extract.zip", "extract.zip.from.AE")
+export("ArrayExpress","extract.zip", "getAE", "queryAE", "magetab2bioc", "AEproc2bioc")
