More comprehensive man pages and vignettes. Add the queryAE function to answer the reviewer comments.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@34168 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,1 @@
-export("ArrayExpress","extract.zip", "getAE", "queryAE", "magetab2bioc", "AEproc2bioc")
+export("ArrayExpress", "getAE", "queryAE", "magetab2bioc")
