- Corrected the attachment of the phenoData to the object when multiple ADF files  - The XML package is now in Imports not in Depends
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@36465 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,1 +1,6 @@
+importFrom("XML", "xmlTreeParse",
+           "xmlRoot",
+           "xmlElementsByTagName",
+           "getNodeSet",
+           "xmlGetAttr")
 export("ArrayExpress", "getAE", "queryAE", "magetab2bioc")
