--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.3.3
+Version: 1.3.4
 Author: Audrey Kauffmann
 Maintainer: Audrey Kauffmann <audrey@ebi.ac.uk>
-Depends: R (>= 2.7.0), Biobase (>= 1.15.13), affy, limma, XML
+Depends: R (>= 2.7.0), Biobase (>= 1.15.13), affy, limma
+Imports: XML
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
 License: Artistic License 2.0
 biocViews: Microarray, DataImport, OneChannel, TwoChannel
