Add functions getcolproc and procset to handle processed data. Only works on simple cases so far.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@36525 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,4 +3,5 @@ importFrom("XML", "xmlTreeParse",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
-export("ArrayExpress", "getAE", "queryAE", "magetab2bioc")
+export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "AEproc2bioc", "getcolproc", "procset")
+
