add argument extract to getAE and extract_path to extract.zip
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@37479 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,5 @@ importFrom("XML", "xmlTreeParse",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
-export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "procset")
+export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "procset", "extract.zip")
 
