Minor changes to code mostly on cleaning up after usage. Used some patches from Andrew Tikhonov.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@39195 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,7 @@ importFrom("XML", "xmlTreeParse",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
+importFrom("limma", "read.maimages")
+importFrom("affy", "ReadAffy")
 export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "procset", "extract.zip")
 
