Always numerics values, and function getcolraw to extract possible column names and avoid downloading twice when setting rawcol is needed.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@41487 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,5 +5,5 @@ importFrom("XML", "xmlTreeParse",
            "xmlGetAttr")
 importFrom("limma", "read.maimages")
 importFrom("affy", "ReadAffy")
-export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "procset", "extract.zip")
+export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "getcolraw", "procset", "extract.zip")
 
