Standardizing reference to Artistic License 2.0.
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@41538 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.5.7
+Version: 1.5.8
 Author: Audrey Kauffmann
 Maintainer: Audrey Kauffmann <audrey@ebi.ac.uk>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
 Imports: XML, affy, limma
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-License: Artistic License 2.0
+License: Artistic-2.0
 biocViews: Microarray, DataImport, OneChannel, TwoChannel
