--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.7.9
+Version: 1.7.10
 Author: Audrey Kauffmann
-Maintainer: Audrey Kauffmann <audrey@ebi.ac.uk>
+Maintainer: Audrey Kauffmann <kauffmann@bergonie.org>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
 Imports: XML, affy, limma
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
