Need to suggest arrayQualityMetrics (used in the vignette).
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@49349 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Author: Audrey Kauffmann
 Maintainer: Audrey Kauffmann <kauffmann@bergonie.org>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
 Imports: XML, affy, limma
+Suggests: arrayQualityMetrics
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
 License: Artistic-2.0
 biocViews: Microarray, DataImport, OneChannel, TwoChannel
