--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.9.2
+Version: 1.9.3
 Author: Audrey Kauffmann
-Maintainer: Audrey Kauffmann <kauffmann@bergonie.org>
+Maintainer: Audrey Kauffmann <akauffmann.bioinfo@gmail.com>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
 Imports: XML, affy, limma
 Suggests: arrayQualityMetrics
