Modified getAE to use new version of files xml added new functions to parse MAGE-TAB files updated parsing ADF and reading data files to accommodate for AE2 native data file formats Various bug fixes ...more to come
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@66462 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,9 +1,12 @@
 importFrom("XML", "xmlTreeParse",
            "xmlRoot",
+           "xpathSApply",
+           "xpathApply",
+           "xmlValue",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
 importFrom("limma", "read.maimages")
 importFrom("affy", "ReadAffy")
-export("ArrayExpress", "getAE", "queryAE", "magetab2bioc", "getcolproc", "getcolraw", "procset", "extract.zip")
+export("ArrayExpress", "getAE", "queryAE", "ae2bioc", "getcolproc", "getcolraw", "procset", "extract.zip")
 
