added urlencode to query string in queryAE variable name bugfix in getAE
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/ArrayExpress@69602 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@ importFrom("XML", "xmlTreeParse",
            "xpathSApply",
            "xpathApply",
            "xmlValue",
+           "xmlAttrs",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
 importFrom("limma", "read.maimages")
 importFrom("affy", "ReadAffy")
+importFrom("utils","URLencode")
 export("ArrayExpress", "getAE", "queryAE", "ae2bioc", "getcolproc", "getcolraw", "procset", "extract.zip")
 
