--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.29.0
+Version: 1.29.1
 Author: Audrey Kauffmann, Ibrahim Emam
-Maintainer: Ibrahim Emam <iemam@ebi.ac.uk>
+Maintainer: Ugis Sarkans <ugis@ebi.ac.uk>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
 Imports: XML, affy, limma
 Description:  Access the ArrayExpress Repository at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
