--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,22 @@ importFrom("XML", "xmlTreeParse",
            "xmlElementsByTagName",
            "getNodeSet",
            "xmlGetAttr")
+importFrom("Biobase", "pData",
+           "pData<-",
+           "phenoData",
+           "phenoData<-",
+           "sampleNames",
+           "sampleNames<-",
+           "read.AnnotatedDataFrame",
+           "varLabels",
+           "exprs",
+           "assayDataNew",
+           "featureData",
+           "featureData<-",
+           "featureNames",
+           "assayData")
 importFrom("limma", "read.maimages")
-importFrom("affy", "ReadAffy")
+importFrom("oligo", "read.celfiles")
 importFrom("utils","URLencode")
 export("ArrayExpress", "getAE", "queryAE", "ae2bioc", "getcolproc", "getcolraw", "procset", "extract.zip")
 
