--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: ArrayExpress
 Title: Access the ArrayExpress Microarray Database at EBI and build Bioconductor data structures: ExpressionSet, AffyBatch, NChannelSet
-Version: 1.59.0
+Version: 1.59.1
 Author: Audrey Kauffmann, Ibrahim Emam, Michael Schubert
 Maintainer: Suhaib Mohammed <suhaib@ebi.ac.uk>
 Depends: R (>= 2.9.0), Biobase (>= 2.4.0)
@@ -10,3 +10,4 @@ License: Artistic-2.0
 biocViews: Microarray, DataImport, OneChannel, TwoChannel
 NeedsCompilation: no
 Suggests: affy
+PackageStatus: Deprecated
